<resources>
    <string name="app_name">Mood Mixer</string>
    <string name="music_viewer">Music</string>
    <string name="playlist_viewer">Playlist</string>
    <string name="songlist_viewer">Songlist</string>
    <string name="mood_viewer">Mood</string>
    <string name="library_viewer">Library</string>
    <string name="song_name">Song Name</string>
    <string name="genre">Genre</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="source_title">Change source to:</string>
    <string name="spotify_source_title">Spotify Premium</string>
    <string name="local_source_title">Local Music</string>
    <string name="artist_name">Artist Name</string>
    <string name="play_song">Play</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="play_next">Play Next</string>
    <string name="play_prev">Play Previous</string>
    <string name="authorize_spotify">Authorize Spotify</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="profile_and_settings">Profile and Settings</string>
</resources>
