<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/moodFragment"
        android:icon="@drawable/mood_vector"
        android:title="@string/mood_viewer" />
    <item
        android:id="@+id/playlistFragment"
        android:icon="@drawable/playlist_vector"
        android:title="@string/playlist_viewer" />
    <item
        android:id="@+id/musicPlayerFragment"
        android:icon="@drawable/music_viewer_vector"
        android:title="@string/music_viewer" />
    <item
        android:id="@+id/songFragment"
        android:icon="@drawable/songlist_vector"
        android:title="@string/songlist_viewer" />
    <item
        android:id="@+id/libraryFragment"
        android:icon="@drawable/library_vector"
        android:title="@string/library_viewer" />



</menu>